--- a/roobiology.html
+++ b/roobiology.html
@@ -534,45 +534,16 @@ the smallest details of the last few minutes.&nbsp;</span><span class="A-license
 				<span class="A-audiobook">gives them amazing night vision and
 					<span class="A-tv">the ability to see, and recall, an amazing amount of detail in something over 100 yards away.</span>
 				</span>
-				<span class="A-audiobook">They can shift their vision outside the normal visual spectrum allowing them to see a total of 170 different levels of
-					the electromagnetic spectrum, including in some shades of ultraviolet. </span>
-				<span class="A-audiobook">However, having their second heart removed prevents them from reprogramming how their eyes work.</span> <span class="A-audiobook">Their eye color can change from brown with flecks of gold, to midnight blue to deep purple. &nbsp;<span class="A-notbbc">The &nbsp;eyes of the Older House are flecked with purple.</span> &nbsp;Such changes appear to depend on their mood. Their pupil response is very different from
-					humans and can resist super intense photo-emissions that would permanently blind a human. They can control the musculature
-					of their eyes to bring things into a very precise focus.
-					<span class="A-fanon">(If they remember to check)</span> they can tell whether a humanoid is Gallifreyan just by looking at them.
-					<span class="A-audiobook">
-						Despite all this, blindness is not unknown on Gallifrey.</span></span><span class="A-audiobook"> Gallifreyans can erect non-porous barriers around their noses, ears and eyeballs that prevent any intrusion on the molecular
-					level.&nbsp;</span><span class="A-game"></span><span class="A-game"><span style="color: red;"> Despite this, an unprotected Gallifreyan's eyes will be
-permanently destroyed if exposed to the cold and vacuum of space for
-too many minutes.</span></span><br><span class="A-audiobook"><span class="A-audiobook"> </span>
-				</span>
+				<span class="A-audiobook">They can shift their vision outside the normal visual spectrum allowing them to see a total of 170 different levels of the electromagnetic spectrum, including in some shades of ultraviolet. However, having their second heart removed prevents them from reprogramming how their eyes work. Their eye color can change from brown with flecks of gold, to midnight blue to deep purple. <span class="A-notbbc">The eyes of the Older House are flecked with purple.</span> Such changes appear to depend on their mood. Their pupil response is very different from humans and can resist super intense photo-emissions that would permanently blind a human. They can control the musculature of their eyes to bring things into a very precise focus.
+					<span class="A-fanon">(If they remember to check)</span> they can tell whether a humanoid is Gallifreyan just by looking at them. </span><span class="A-audiobook">Despite all this, blindness is not unknown on Gallifrey. Gallifreyans can erect non-porous barriers around their noses, ears and eyeballs that prevent any intrusion on the molecular level. </span><span class="A-tv"> Despite this, an unprotected Gallifreyan's eyes will be permanently destroyed if exposed to the cold and vacuum of space for too many minutes. </span>
+				<br>
 			</div>
 			<div class="section">
 				<span class="A-tv">A </span>
 				<span class="A-licensed">regenerated</span>
-				<span class="A-audiobook">
-					<span class="A-tv"> Gallifreyan's,</span>
-					<span class="A-tv"> hearing </span>
-					<span class="A-tv">
-						<span class="A-tv">and </span>smell is better than human's
-						<span class="A-tv">. Some Gallifreyans can perform </span>
-					</span>
-				</span>
-				<span class="A-tv">biochemical analysis of what they taste </span>
-				<span class="A-tv">including identifying blood type.</span>
-				<span class="A-audiobook">
-					<span class="A-tv">
-						<span class="A-audiobook">They can use their sense of smell to perform chemical analysis of the air. </span>And, unconscious Gallifreyans can
-						often be awakened with </span>
-				</span>
-				<span class="A-tv">a heated infusion of free radicals, antioxidants, and tannin (aka boiling tea vapor). </span>
-				<span class="A-tv">The scent of Celery is considered to be another powerful restorative on Gallifrey. A Gallifreyan can hear significantly
-					higher frequencies then a human. Many Gallifreyans are capable of amazing voice imitation. Thus locks with voice prints
-					are not in common use.
-					<span class="A-audiobook">Compared
-to humans, Gallifreyans are quite resistance to dizziness and other
-inner-ear disorientation caused by sudden changes in position. </span>
-				</span>
+				<span class="A-tv"> Gallifreyan's, hearing and smell is better than human's. Some Gallifreyans can perform biochemical analysis of what they taste including identifying blood type. </span>
+				<span class="A-audiobook">They can use their sense of smell to perform chemical analysis of the air. </span><span class="A-tv">And, unconscious Gallifreyans can often be awakened with a heated infusion of free radicals, antioxidants, and tannin (aka boiling tea vapor). The scent of Celery is considered to be another powerful restorative on Gallifrey. A Gallifreyan can hear significantly higher frequencies then a human. Many Gallifreyans are capable of amazing voice imitation. Thus locks with voice prints are not in common use.
+				</span><span class="A-audiobook">Compared to humans, Gallifreyans are quite resistance to dizziness and other inner-ear disorientation caused by sudden changes in position. </span>
 			</div>
 		</div>
 		<div class="article" id="breathing" style="padding-top: 160px; margin-top: -160px;">
